# multirotors_landing

./: .gitignore  README.md
data/trained_policy/: log.txt  (+2 more)
multirotors_landing_lib/: CMakeLists.txt  setup.py
multirotors_landing_lib/cmake/: gtest.cmake  pybind11.cmake  vulkan_glasses.cmake
multirotors_landing_lib/config/: quad_landing.yaml  quad_landing_test.yaml
multirotors_landing_lib/config/models_reset/: baxall.yaml  buffalo_construction_site.yaml  church.yaml  construction_site.yaml  essex_castle.yaml  fire_training_center.yaml  five_skyscrapers.yaml  fraser_gunnery_range.yaml  garden_of_eden.yaml  hartley_mansion.yaml  hofdi_house.yaml  house_garden.yaml  irchel.yaml  rochester_warehouse.yaml  small_mill.yaml  tin_hau_temple.yaml  wood_island.yaml  xcell_aerial_hq.yaml
multirotors_landing_lib/config/renderer/: vulkan.yaml
multirotors_landing_lib/include/multirotors_landing_lib/collider/: collider_base.hpp  collider_ply.hpp  octree_semantics.hpp
multirotors_landing_lib/include/multirotors_landing_lib/common/: common_defs.hpp  geometry_utils.hpp  logger.hpp  model_defs.hpp  semantics_classes.hpp  typedefs.hpp
multirotors_landing_lib/include/multirotors_landing_lib/communication/: client_comm.h  communicator_client.hpp  communicator_depth_completion.hpp  communicator_sem_segmentation.hpp  communicator_server.hpp  depth_completion_comm.h  semantic_seg_comm.h  server_comm.h
multirotors_landing_lib/include/multirotors_landing_lib/dynamics/: dynamics_base.hpp  dynamics_quadrotor.hpp
multirotors_landing_lib/include/multirotors_landing_lib/dynamics/ode/boost/numeric/: odeint.hpp
multirotors_landing_lib/include/multirotors_landing_lib/dynamics/ode/boost/numeric/odeint/: config.hpp  version.hpp
multirotors_landing_lib/include/multirotors_landing_lib/dynamics/ode/boost/numeric/odeint/algebra/: array_algebra.hpp  default_operations.hpp  fusion_algebra.hpp  range_algebra.hpp  vector_space_algebra.hpp
multirotors_landing_lib/include/multirotors_landing_lib/dynamics/ode/boost/numeric/odeint/integrate/: integrate.hpp  integrate_adaptive.hpp  integrate_const.hpp  integrate_n_steps.hpp  integrate_times.hpp  null_observer.hpp  observer_collection.hpp
multirotors_landing_lib/include/multirotors_landing_lib/dynamics/ode/boost/numeric/odeint/stepper/: adams_bashforth.hpp  adams_bashforth_moulton.hpp  adams_moulton.hpp  bulirsch_stoer.hpp  bulirsch_stoer_dense_out.hpp  controlled_runge_kutta.hpp  controlled_step_result.hpp  dense_output_runge_kutta.hpp  euler.hpp  explicit_error_generic_rk.hpp  explicit_generic_rk.hpp  generation.hpp  implicit_euler.hpp  modified_midpoint.hpp  rosenbrock4.hpp  rosenbrock4_controller.hpp  rosenbrock4_dense_output.hpp  runge_kutta4.hpp  runge_kutta4_classic.hpp  runge_kutta_cash_karp54.hpp  runge_kutta_cash_karp54_classic.hpp  runge_kutta_dopri5.hpp  runge_kutta_fehlberg78.hpp  stepper_categories.hpp  symplectic_euler.hpp  symplectic_rkn_sb3a_m4_mclachlan.hpp  symplectic_rkn_sb3a_mclachlan.hpp
multirotors_landing_lib/include/multirotors_landing_lib/dynamics/ode/boost/numeric/odeint/util/: bind.hpp  copy.hpp  is_resizeable.hpp  resize.hpp  resizer.hpp  same_instance.hpp  same_size.hpp  state_wrapper.hpp  ublas_wrapper.hpp  unit_helper.hpp  unwrap_reference.hpp
multirotors_landing_lib/include/multirotors_landing_lib/envs/: env_base.hpp  quadrotor_env.hpp  vec_env.hpp  vec_env_quadrotor.hpp
multirotors_landing_lib/include/multirotors_landing_lib/renderer/: renderer_base.hpp  renderer_vulkan.hpp
multirotors_landing_lib/include/multirotors_landing_lib/robots/: quadrotor.hpp  quadrotor_simplified.hpp  robot_base.hpp
multirotors_landing_lib/src/collider/: collider_base.cpp  collider_ply.cpp  octree_semantics.cpp
multirotors_landing_lib/src/common/: logger.cpp
multirotors_landing_lib/src/communication/: communicator_client.cpp  communicator_depth_completion.cpp  communicator_seg_segmentation.cpp  communicator_server.cpp
multirotors_landing_lib/src/dynamics/: dynamics_base.cpp  dynamics_quadrotor.cpp
multirotors_landing_lib/src/envs/: env_base.cpp  quadrotor_env.cpp  vec_env.cpp  vec_env_quadrotor.cpp
multirotors_landing_lib/src/renderer/: renderer_base.cpp  renderer_vulkan.cpp
multirotors_landing_lib/src/robots/: quadrotor.cpp  quadrotor_simplified.cpp  robot_base.cpp
multirotors_landing_lib/src/wrapper/: pybind_wrapper.cpp
multirotors_landing_lib/tests/communication/: python_socket_client.cpp  test_communicator_client.cpp  test_communicator_server.cpp  test_socket_client.cpp  test_socket_server.cpp
multirotors_landing_lib/tests/communication/python/: opencv_socket_comm.py  socket_server.py
multirotors_landing_lib/tests/envs/: vec_env.cpp
multirotors_landing_rl/: setup.py
(+145 files in other folders)
